src/components/Home/styles.module.scss
.outer {
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  margin: 0 auto;
  position: relative;
  @media (min-width: 600px) {
    max-width: 500px;
  }
}

.username {
  margin: 10px;
}
.inner {
  width: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}
.inner::-webkit-scrollbar {
  /* WebKit */
  width: 0;
  height: 0;
}

.profileTopWrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  @media (min-width: 600px) {
    flex-direction: row;
    margin-bottom: 15px;
    justify-content: space-between;
    width: 100%;
  }
}

.profile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  padding: 20px;
  padding-top: 0;
  @media (min-width: 600px) {
    width: 85%;
  }
}

.profileStats {
  display: flex;
  margin: 10px auto;
  justify-content: space-evenly;
  width: 275px;
}

.profilePic {
  width: 75px;
  height: 75px;
  border: 1px solid rgba(255, 255, 255, 0.723);
  border-radius: 50%;
  overflow: hidden;
  & img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
  }
}

.statsWrap {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.btnContainer {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
  @media (min-width: 600px) {
    flex-direction: row;
  }
}
.smallBtnWrap {
  display: flex;
  height: 100%;
  gap: 5px;

  flex-grow: 1;
}
.btn {
  cursor: pointer;
  border-radius: 4px;
  border: none;
  height: 35px;
}
.btnFollow {
  width: 275px;
  color: white;
  background: rgb(112, 30, 30);
  transition: all 0.2s ease-in-out;
  display: flex;
  align-items: center;
  justify-content: center;
  &:hover {
    background: rgb(167, 44, 44);
  }
  &.active {
    background: rgba(60, 60, 60, 0.75);
  }
}
.btnIcon {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  min-width: 30px;
  & * {
    color: rgb(73, 72, 72);
    max-width: 20px;
  }
}
.profileBio {
  margin-top: 10px;
}

.modal {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  z-index: 1;
}

